--- a/views/applicant/index.ejs
+++ b/views/applicant/index.ejs
@@ -1,6 +1,6 @@
 <h1>Application Page</h1>
 
-<img src="logo.png" alt="DS Logo" width="100">
+<img src="DS Logo.png" alt="DS Logo" width="100">
 
 <form method="post" action="/applicants">
   <h2>Register now!</h2>
