--- a/views/applicant/show.ejs
+++ b/views/applicant/show.ejs
@@ -1,2 +1,1 @@
-<h2>Profile page: <%= Applicant.name%></h2>
-<p>Hi my name is <%= Applicant.name %></p>
+<h2>Profile page: <%= applicant.name%></h2>
