--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,9 +10,7 @@
   <div class="col-sm-12">
     <div class="well">
     <p>
-      <strong>id</strong>: <%= user._id %><br>
-      <strong>email</strong>: <%= user.local.email %><br>
-      <strong>password</strong>: <%= user.local.password %>
+      <strong>Welcome <%= user.local.email %>!</strong> <br>
     </p>
 
     </div>
