--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,4 +2,4 @@
 <br>
 <br>
 
-<img src="homepage.png" alt="This is my homepage" max width = "100%">
+<img src="Homepage.png" alt="This is my homepage" max width = "100%">
